Bug 448529 - Pre-configured System Monitor widgets added to desktop appear as generic "System Monitor Sensor" widgets
Summary: Pre-configured System Monitor widgets added to desktop appear as generic "Sys...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-01-15 14:48 UTC by Patrick Silva
Modified: 2022-01-27 18:24 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-15 14:48:09 UTC
SUMMARY
All System Monitor widgets are affected.

STEPS TO REPRODUCE
1. use Plasma 5.24 beta
2. open Widgets Explorer
3. search for 'Total CPU Use' widget and add it to desktop

OBSERVED RESULT
Total CPU Use widget has no sensor

EXPECTED RESULT
System Monitor widgets added to desktop should have sensors

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Michael Büker 2022-01-20 20:54:05 UTC
I confirm this bug for a Kubuntu 22.04 daily test build using Plasma 5.23.90 on X11.
Comment 2 Nate Graham 2022-01-20 21:27:39 UTC
Can also confirm.
Comment 3 Bug Janitor Service 2022-01-27 12:33:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1410
Comment 4 Arjen Hiemstra 2022-01-27 16:05:49 UTC
Git commit 7736fc8dfa7c12f72c3206f7c16e00ae28783d7e by Arjen Hiemstra.
Committed on 27/01/2022 at 12:33.
Pushed by ngraham into branch 'master'.

applets/systemmonitor: Don't load "metadata.desktop" to determine preset

Applets were apparently blindly converted to use JSON metadata without
checking the usage. At least KPackage now has a direct getter for the
package metadata, so use that to get the plugin ID instead of manually
loading the package metadata.

M  +1    -1    applets/systemmonitor/systemmonitor/systemmonitor.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/7736fc8dfa7c12f72c3206f7c16e00ae28783d7e
Comment 5 Nate Graham 2022-01-27 16:06:21 UTC
Git commit 42be68b2bf8cf2c5e57a1d13914447cbd780bee4 by Nate Graham, on behalf of Arjen Hiemstra.
Committed on 27/01/2022 at 16:06.
Pushed by ngraham into branch 'Plasma/5.24'.

applets/systemmonitor: Don't load "metadata.desktop" to determine preset

Applets were apparently blindly converted to use JSON metadata without
checking the usage. At least KPackage now has a direct getter for the
package metadata, so use that to get the plugin ID instead of manually
loading the package metadata.


(cherry picked from commit 7736fc8dfa7c12f72c3206f7c16e00ae28783d7e)

M  +1    -1    applets/systemmonitor/systemmonitor/systemmonitor.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/42be68b2bf8cf2c5e57a1d13914447cbd780bee4
Comment 6 Lucia Mrenica 2022-01-27 17:03:56 UTC
In sensor settings, there is an option to load a preset. Is it supposed to be empty or is that a bug too?
Comment 7 Arjen Hiemstra 2022-01-27 17:15:21 UTC
It's a symptom of pretty much the same bug that should be resolved with https://invent.kde.org/plasma/libksysguard/-/merge_requests/207
Comment 8 Lucia Mrenica 2022-01-27 18:24:01 UTC
(In reply to Arjen Hiemstra from comment #7)
> It's a symptom of pretty much the same bug that should be resolved with
> https://invent.kde.org/plasma/libksysguard/-/merge_requests/207

I tried building that MR (or Plasma/5.24 branch) but it doesn't build, am I missing something?
I get:
/home/mthw/kde/libksysguard/faces/SensorFaceController.cpp:897:19: error: cannot convert ‘<brace-enclosed initializer list>’ to ‘const QJsonObject&’