applets/systemmonitor: Don't load "metadata.desktop" to determine preset

Applets were apparently blindly converted to use JSON metadata without
checking the usage. At least KPackage now has a direct getter for the
package metadata, so use that to get the plugin ID instead of manually
loading the package metadata.

BUG: 448529